# multi_robot_motion_planning

./: .gitmodules  LICENSE  README.md
mr_config/: CMakeLists.txt  package.xml
mr_config/config/moveit/: controllers.yaml  ompl_planning.yaml
mr_config/config/rviz/: robot_1.rviz
mr_config/config/scene/: big-box.stl  mutil_4arm_four_bin_tmp.scene  mutil_4arm_four_bin_wall_tmp.scene  mutil_4arm_tmp.scene  single_arm_packing.scene  single_arm_picking.scene  square_box.stl  tmp_1.scene  tmp_2.scene  tmp_3.scene
mr_config/config/universal_robots/: ur3e_update_rate.yaml  ur5_update_rate.yaml  ur5e_update_rate.yaml  ur_controllers.yaml
mr_config/launch/: four_arm_moveit.launch.py  mm_ur_moveit.launch.py  multi_arm_control.launch.py  multi_arm_moveit.launch.py  multi_real_arm.launch.py  ur_control.launch.py  ur_moveit.launch.py
mr_config/rviz/: four_robot.rviz  multi_robot_1.rviz  robot_1.rviz  robot_2.rviz  view_robot.rviz
mr_config/srdf/universal_robots/: ur.srdf.xacro  ur_macro.srdf.xacro  ur_tool_changeable.srdf.xacro
mr_controllers/: CMakeLists.txt  controller_plugins.xml  package.xml
mr_controllers/include/mr_controllers/: mr_joint_trajectory_controller.hpp
mr_controllers/src/: mr_joint_trajectory_controller.cpp
mr_description/: CMakeLists.txt  package.xml
mr_description/config/universal_robots/ur10e/: joint_limits.yaml
mr_description/config/universal_robots/ur5/: joint_limits.yaml
mr_description/config/universal_robots/ur5e/: iarc_ur5e_calib.yaml  joint_limits.yaml
mr_description/meshes/: black_box_bigger.stl  black_box_bigger_2.stl  black_box_origin.stl  black_box_ring.stl  black_box_thin.stl
mr_description/meshes/tool/: suction_tool.stl  suction_tool_bigger.stl  tool_no_suctoin.stl  tool_no_suctoin_1.stl  tool_with_suction.stl  tool_with_suction_323.stl  tool_with_suctoin.stl
mr_description/urdf/: hiwin_gripper.xacro  load_robot.xacro  suction_tool.xacro
mr_description/urdf/tools/: hiwin_gripper.xacro
mr_description/urdf/universal_robots/: ur.ros2_control.xacro  ur.urdf.xacro  ur_macro.xacro  ur_tool_changeable.urdf.xacro
mr_description/world/: home-area.world  two_walls.world
mr_description/world/home-area/: model.config  model.sdf
mr_description/world/two_walls/: model.config  model.sdf
mr_msgs/: CMakeLists.txt  package.xml
mr_msgs/action/: Sample.action
mr_msgs/msg/: Obstacles.msg  Pose.msg  Poses.msg  Sample.msg  ServoControl.msg
mr_msgs/srv/: ComputeTrajectoryLength.srv  GetRobotTrajectoryObstacle.srv  IK.srv  MarkTrajectoryState.srv  PathToTraj.srv  Sample.srv  SetPlannedTrajectory.srv  SetTrajectoryState.srv  TrajMerge.srv
